fix vertical rule visible with navbar toggled in desktop mode

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -136,6 +136,10 @@ ul > li { list-style-type: square; }
 	min-height: 0;
 	flex-grow: 1;
 }
+
+.nav_toggled .main > .vr {
+	display: none;
+}
 /* #endregion */
 
 
